# ecsact_si_wasmer

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  build_recipe.yml  cog.toml  ecsactsi_logger.cc  ecsactsi_logger.hh  ecsactsi_wasi.cc  ecsactsi_wasi.h  ecsactsi_wasi.hh  ecsactsi_wasm.cc  ecsactsi_wasm.h  wasm_ecsact_memory.cc  wasm_ecsact_memory.hh  wasm_ecsact_system_execution.cc  wasm_ecsact_system_execution.h  wasmer.bzl
.github/workflows/: main.yml
bazel/: common.bazelrc  copts.bzl  linkopts.bzl
detail/: ecsactsi_logger.cc  ecsactsi_logger.hh  ecsactsi_wasi.cc  ecsactsi_wasi.hh  ecsactsi_wasi_fs.cc  ecsactsi_wasi_fs.hh  ecsactsi_wasm.cc  ecsactsi_wasm_internal.cc  ecsactsi_wasm_internal.hh  ecsactsi_wasm_mem_stack.cc  ecsactsi_wasm_mem_stack.hh  guest_imports.hh  wasm_ecsact_memory.cc  wasm_ecsact_memory.hh  wasm_ecsact_pointer_map.cc  wasm_ecsact_pointer_map.hh  wasm_ecsact_system_execution.cc  wasm_ecsact_system_execution.h  wasm_file_binary.hh  wasm_util.hh
detail/guest_imports/: env.hh  wasi_snapshot_preview1.hh
ecsact/: wasm.h  wasm.hh
ecsact/si/wasmer/detail/: cpp_util.hh  globals.cc  guest_imports.hh  logger.cc  logger.hh  mem_stack.cc  mem_stack.hh  util.hh  wasi.cc  wasi.hh  wasi_fs.cc  wasi_fs.hh  wasm.cc  wasm_ecsact_system_execution.cc  wasm_ecsact_system_execution.h
ecsact/si/wasmer/detail/guest_imports/: README.md  env.hh  wasi_snapshot_preview1.hh
ecsact/si/wasmer/detail/minst/: minst.cc  minst.hh
ecsact/wasm/detail/: cpp_util.hh  emscripten_debug.cc  emscripten_debug.hh  globals.cc  globals.hh  guest_imports.hh  logger.cc  logger.hh  mem_stack.cc  mem_stack.hh  system_impl_memory.cc  system_impl_memory.hh  tracy.hh  util.hh  wasi.cc  wasi.hh  wasi_fs.cc  wasi_fs.hh  wasm.cc  wasm_ecsact_system_execution.cc  wasm_ecsact_system_execution.h  wasm_module.hh
ecsact/wasm/detail/guest_imports/: README.md  emscripten_debug.hh  env.hh  wasi_snapshot_preview1.hh
ecsact/wasm/detail/minst/: minst.cc  minst.hh
ecsactsi_wasm_tester/: BUILD.bazel  ecsactsi_wasm_tester.cc  mock_execution_context_methods.cc  mock_set_system_impl.cc  mock_set_system_impl.hh
example/: BUILD.bazel  example.cc  example.ecsact  system_impls.cc  test.cc  wasi_test.cc  wasi_test_file.txt  wasi_test_iostream.cc  wasi_test_puts.cc  wasi_test_read_file.cc
test/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  copts.bzl  example.cc  minst_test.cc  minst_test_wasm.cc  system_impls.cc  wasi_test.cc  wasi_test.ecsact  wasi_test_iostream.cc  wasi_test_printf.cc  wasi_test_read_file.cc
test/example/: BUILD.bazel  example.cc  example.ecsact
tests/: BUILD.bazel  minst_test.cc  minst_test_wasm.cc
