load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_build_recipe")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "headers",
    srcs = [
        "ecsact/wasm.h",
        "ecsact/wasm.hh",
    ],
)

filegroup(
    name = "sources",
    srcs = glob([
        "ecsact/wasm/**/*.cc",
        "ecsact/wasm/**/*.hh",
        "ecsact/wasm/**/*.h",
    ]),
)

cc_library(
    name = "ecsact_si_wasm",
    copts = copts,
    defines = [
        "ECSACTSI_WASM_API=",
        "ECSACT_DYNAMIC_API=",
    ],
    hdrs = [":headers"],
    srcs = [":sources"],
    deps = [
        "@wasmer",
        "@ecsact_runtime//:common",
        "@ecsact_runtime//:dynamic",
    ],
)

cc_library(
    name = "minst",
    copts = copts,
    hdrs = [
        "ecsact/wasm/detail/minst/minst.hh",
    ],
    srcs = [
        "ecsact/wasm/detail/minst/minst.cc",
    ],
    deps = [
        ":cpp_util",
        "@ecsact_runtime//:common",
        "@wasmer",
    ],
)

cc_library(
    name = "cpp_util",
    copts = copts,
    hdrs = ["ecsact/wasm/detail/cpp_util.hh"],
)

exports_files(["build_recipe.yml"])

ecsact_build_recipe(
    name = "build_recipe",
    srcs = [
        ":sources",
        ":headers",
    ],
    imports = [
        "ecsact_set_system_execution_impl",
        "ecsact_system_execution_context_id",
        "ecsact_system_execution_context_parent",
        "ecsact_system_execution_context_same",
        "ecsact_system_execution_context_get",
        "ecsact_system_execution_context_update",
        "ecsact_system_execution_context_has",
        "ecsact_system_execution_context_generate",
        "ecsact_system_execution_context_add",
        "ecsact_system_execution_context_remove",
        "ecsact_system_execution_context_other",
        "ecsact_system_execution_context_entity",
        "ecsact_system_execution_context_action",
    ],
    exports = [],
)
