load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "headers",
    srcs = [
        "ecsact/wasm.h",
        "ecsact/wasm.hh",
    ],
)

filegroup(
    name = "sources",
    srcs = glob([
        "ecsact/wasm/**/*.cc",
        "ecsact/wasm/**/*.hh",
        "ecsact/wasm/**/*.h",
    ]),
)

cc_library(
    name = "ecsact_si_wasm",
    hdrs = [":headers"],
    copts = copts,
    deps = [
        "@ecsact_runtime//:common",
        "@ecsact_runtime//:dynamic",
        "@wasmer",
    ],
)

"""
It is expected that users of this target are to set ECSACTSI_WASM_API* and ECSACT_DYNAMIC_API* macros for their configuration
Example 1:
```
cc_library(
    name = "my_si_wasm_impl",
    deps = ["@ecsact_si_wasm//:implementation"],
    defines = [
        # Statically link the si_wasm api
        "ECSACTSI_WASM_API=",
        # Load the dynamic module at runtime
        "ECSACT_DYNAMIC_API_LOAD_AT_RUNTIME",
    ],
)
```

```
Example 2:
cc_library(
    name = "my_si_wasm_impl",
    deps = ["@ecsact_si_wasm//:implementation"],
    defines = [
        # Statically link the si_wasm api
        "ECSACTSI_WASM_API=",
        # Statically link dynamic module
        "ECSACT_DYNAMIC_API=",
    ],
)
```
"""

cc_library(
    name = "implementation",
    srcs = [":sources"],
    hdrs = [":headers"],
    copts = copts,
    deps = [
        ":ecsact_si_wasm",
    ],
)

cc_library(
    name = "minst",
    srcs = [
        "ecsact/wasm/detail/minst/minst.cc",
    ],
    hdrs = [
        "ecsact/wasm/detail/minst/minst.hh",
    ],
    copts = copts,
    deps = [
        ":cpp_util",
        "@ecsact_runtime//:common",
        "@wasmer",
    ],
)

cc_library(
    name = "cpp_util",
    hdrs = ["ecsact/wasm/detail/cpp_util.hh"],
    copts = copts,
)
