module(
    name = "ecsact_si_wasm",
    version = "0.1.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "ecsact_runtime", version = "0.6.1")
bazel_dep(name = "rules_ecsact", version = "0.4.0")
bazel_dep(name = "docopt.cpp", version = "0.6.2")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "rules_wasmer", version = "0.1.1")

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")
