module(
    name = "ecsact_si_wasm",
    version = "0.1.2",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "ecsact_runtime", version = "0.6.1")
bazel_dep(name = "rules_ecsact", version = "0.5.1")
bazel_dep(name = "docopt.cpp", version = "0.6.2")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "rules_wasmer", version = "0.1.1")
bazel_dep(name = "ecsact_cli", version = "0.3.5")

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

bazel_dep(name = "platforms", version = "0.0.10")

git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# TODO: https://github.com/bazelbuild/bazel-central-registry/pull/1916
git_override(
    module_name = "libarchive",
    commit = "7c331f92acea5243c195cdc6fb46ecfa11ce1ce2",
    remote = "https://github.com/zaucy/libarchive.git",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")
