load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "copts")
load("@bazel_skylib//rules:native_binary.bzl", "native_test")

native_test(
    name = "wasi_test",
    src = ":ecsactsi_wasm_tester",
    out = "ecsactsi_wasm_tester_wasi_test",
    data = [
        "//example:iostream__system_impl_wasm",
    ],
    args = [
        "$(location //example:iostream__system_impl_wasm)",
        "wasi_test__WasiTestSystem",
    ],
)

cc_binary(
    name = "ecsactsi_wasm_tester",
    srcs = [
        "ecsactsi_wasm_tester.cc",
        "mock_execution_context_methods.cc",
        "mock_set_system_impl.cc",
        "mock_set_system_impl.hh",
        "//:sources",
    ],
    copts = copts,
    features = ["-pic"],
    defines = [
        "ECSACTSI_WASM_API=",
        "ECSACT_CORE_API=",
        "ECSACT_DYNAMIC_API=",
    ],
    deps = [
        "//:ecsactsi_wasm",
        "@bazelregistry_docopt_cpp//:docopt",
        "@ecsact_runtime//:core",
        "@ecsact_runtime//:dynamic",
        "@ecsact_runtime//:meta",
        "@magic_enum",
        "@wasmer//:wasmer-c-api",
    ],
)
