module(name = "ecsact_si_wasm_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ecsact_runtime", version = "0.5.1")
bazel_dep(name = "rules_wasmer", version = "0.1.1")
bazel_dep(name = "ecsact_rt_entt", version = "0.2.2")
bazel_dep(name = "ecsact_lang_cpp", version = "0.3.1")
bazel_dep(name = "ecsact_interpret", version = "0.5.1")
bazel_dep(name = "ecsact_parse", version = "0.3.2")
bazel_dep(name = "ecsact_codegen", version = "0.1.3")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "boost.mp11", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "ecsact_si_wasm")
bazel_dep(name = "rules_ecsact", version = "0.4.2")

local_path_override(
    module_name = "ecsact_si_wasm",
    path = "..",
)

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact")
ecsact.sdk_toolchain(version = "0.6.2")
use_repo(ecsact, "ecsact_toolchains")

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")

register_toolchains("@ecsact_toolchains//:all")
