module(name = "ecsact_si_wasm_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ecsact_runtime", version = "0.6.1")
bazel_dep(name = "rules_wasmer", version = "0.1.1")
bazel_dep(name = "ecsact_rt_entt", version = "0.3.1")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.1")
bazel_dep(name = "ecsact_interpret", version = "0.6.0")
bazel_dep(name = "ecsact_parse", version = "0.4.0")
bazel_dep(name = "ecsact_codegen", version = "0.2.0")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "boost.mp11", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "ecsact_cli", version = "0.3.4")
bazel_dep(name = "rules_ecsact", version = "0.5.1")
bazel_dep(name = "xxhash", version = "0.8.2")
bazel_dep(name = "ecsact_si_wasm")
local_path_override(
    module_name = "ecsact_si_wasm",
    path = "..",
)

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# TODO: https://github.com/bazelbuild/bazel-central-registry/pull/1916
git_override(
    module_name = "libarchive",
    commit = "7c331f92acea5243c195cdc6fb46ecfa11ce1ce2",
    remote = "https://github.com/zaucy/libarchive.git",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact", dev_dependency = True)
ecsact.toolchain(use_ecsact_cli = True)
use_repo(ecsact, "ecsact_toolchain")

wasmer = use_extension("@rules_wasmer//wasmer:extensions.bzl", "wasmer")
use_repo(wasmer, "wasmer")

register_toolchains(
    "@ecsact_toolchain//:all",
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
